--- a/desafios/desafio012/style.css
+++ b/desafios/desafio012/style.css
@@ -1,13 +1,29 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@900&display=swap');
+
+
+
+:root {
+    --font1: Verdana, 'Geneva', Tahoma, sans-serif;
+    --font2: 'Passion One', cursive;
+    --font3: 'Lobster', 'cursive';     
+}
+
+
 *{
     margin: 0px;
     padding: 0px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 html, body {
     min-width: 100%;
     background-color: darkgray;
+    font-family: var(--font1);
+
 }
 
 header {
@@ -19,6 +35,8 @@ header {
 header > h1 {
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--font2);
+    font-size: 3em;
 }
 
 header > p {
@@ -40,6 +58,13 @@ section {
     padding-bottom: 10%;
     line-height: 2em;
     padding-left: 30px;
+    font-family:
+    
+}
+
+section > p {
+    font-family: var(--font3);
+    font-size: 2.5emvw;
 }
 
 section.normal {
@@ -55,6 +80,7 @@ section.imagem {
 section.imagem > p {
     width: 400px;
     background-color: rgba(0, 0, 0, 0.219);
+    
 }
 
 footer {
