--- a/desafios/desafio012/style.css
+++ b/desafios/desafio012/style.css
@@ -51,6 +51,7 @@ header a, footer a {
 
 header a:hover, footer a:hover {
     text-decoration: underline;
+    
 }
 
 section {
@@ -65,6 +66,8 @@ section {
 section > p {
     font-family: var(--font3);
     font-size: 2.5emvw;
+    padding-bottom: 2em;
+    
 }
 
 section.normal {
@@ -75,12 +78,26 @@ section.normal {
 section.imagem {
     background-color: rgb(54, 50, 50);
     color: white;
+    background-attachment: fixed;
+    
 }
 
 section.imagem > p {
     width: 400px;
     background-color: rgba(0, 0, 0, 0.219);
+    text-shadow: 1px, 1px, 0px black;
     
+}
+
+section#img01 {
+    background-image: url('imagens/background001.jpg');
+    background-position: right center;
+    background-size: cover;
+}
+
+section#img02 {
+    background-image: url('imagens/background002.jpg');
+    background-size: cover;
 }
 
 footer {
@@ -89,4 +106,6 @@ footer {
     text-align: center;
     padding: 10px;
 }
+
+
 
